# IDATT2505-XR

Exercise1/: CMakeLists.txt  main.cpp  taskb.cpp
Exercise2/: CMakeLists.txt  main.cpp
Exercise3/: CMakeLists.txt  main.cpp
